Updated code with fixes

--- a/public/index.html
+++ b/public/index.html
@@ -195,15 +195,14 @@
     <a href="#"><i class="bi bi-cart cart"></i></a>
    </div>
    <div class = "image_fade pro">
-    <img class ="Sirv image-main" src="images/p4.webp" alt="">
-    <img class ="Sirv image-hover" src="images/P4-hover.webp" alt="">
+    <img class ="Sirv image-main" src="images/p2.webp" alt="">
+    <img class ="Sirv image-hover" src="images/P2-hover.webp" alt="">
     <div class="des">
-        <span>Product4</span>
+        <span>Product5</span>
         <h5>Product subheading</h5>
         <div class="stars">
           <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
+        
     </div>
         <h4>£78</h4>         
     </div>
@@ -397,7 +396,7 @@
       </div>
 
       <div class="d-flex flex-column flex-sm-row justify-content-between py-4  ">
-        <p>© NoSauce</p>
+        <p>© Tst</p>
         <ul class="list-unstyled d-flex">
           <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
           <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
