Updated code with fixes

--- a/public/index.html
+++ b/public/index.html
@@ -195,14 +195,15 @@
     <a href="#"><i class="bi bi-cart cart"></i></a>
    </div>
    <div class = "image_fade pro">
-    <img class ="Sirv image-main" src="images/p2.webp" alt="">
-    <img class ="Sirv image-hover" src="images/P2-hover.webp" alt="">
+    <img class ="Sirv image-main" src="images/p4.webp" alt="">
+    <img class ="Sirv image-hover" src="images/P4-hover.webp" alt="">
     <div class="des">
-        <span>Product5</span>
+        <span>Product4</span>
         <h5>Product subheading</h5>
         <div class="stars">
           <i class="bi bi-star"></i>
-        
+          <i class="bi bi-star"></i>
+          <i class="bi bi-star"></i>
     </div>
         <h4>£78</h4>         
     </div>
