Updated the HTML code

--- a/public/index.html
+++ b/public/index.html
@@ -144,117 +144,137 @@
       </nav>
 
 <div class="pro-container">
- <div class = "image_fade pro"  onclick="window.location.href='sproduct.html';">
-    <img class =" Sirv image-main" src="images/p1.webp" alt="">
-    <img class ="Sirv image-hover" src="images/P1-hover.webp" alt="">
+  <div class="image_fade pro image_fade-animation">
+    <img class="Sirv image-main" src="images/p2.webp" alt="">
+    <img class="Sirv image-hover" src="images/P2-hover.webp" alt="">
     <div class="des">
-        <span>Product1</span>
-        <h5>Product subheading</h5>
+        <span>Trapstar</span>
+        <h5>Shooters tracksuit</h5>
         <div class="stars">
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
+        stars
+        stars
+        stars
+        stars
+        stars
     </div>
         <h4>£78</h4>         
     </div>
     <a href="#"><i class="bi bi-cart cart"></i></a>
    </div>
-   <div class = "image_fade pro">
-    <img class ="Sirv image-main" src="images/p5.webp" alt="">
-    <img class ="Sirv image-hover" src="images/P5-hover.webp" alt="">
+   <div class="image_fade pro image_fade-animation">
+    <img class="Sirv image-main" src="images/p2.webp" alt="">
+    <img class="Sirv image-hover" src="images/P2-hover.webp" alt="">
     <div class="des">
-        <span>Product2</span>
-        <h5>Product subheading</h5>
+        <span>Trapstar</span>
+        <h5>Shooters tracksuit</h5>
         <div class="stars">
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
+        stars
+        stars
+        stars
+        stars
+        stars
     </div>
         <h4>£78</h4>         
     </div>
     <a href="#"><i class="bi bi-cart cart"></i></a>
    </div>
-   <div class = "image_fade pro">
-    <img class ="Sirv image-main" src="images/p3.webp" alt="">
-    <img class ="Sirv image-hover" src="images/P3-hover.webp" alt="">
+   <div class="image_fade pro image_fade-animation">
+    <img class="Sirv image-main" src="images/p2.webp" alt="">
+    <img class="Sirv image-hover" src="images/P2-hover.webp" alt="">
     <div class="des">
-        <span>Product3</span>
-        <h5>Product subheading</h5>
+        <span>Trapstar</span>
+        <h5>Shooters tracksuit</h5>
         <div class="stars">
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
+        stars
+        stars
+        stars
+        stars
+        stars
     </div>
         <h4>£78</h4>         
     </div>
     <a href="#"><i class="bi bi-cart cart"></i></a>
    </div>
-   <div class = "image_fade pro">
-    <img class ="Sirv image-main" src="images/p4.webp" alt="">
-    <img class ="Sirv image-hover" src="images/P4-hover.webp" alt="">
+   <div class="image_fade pro image_fade-animation">
+    <img class="Sirv image-main" src="images/p2.webp" alt="">
+    <img class="Sirv image-hover" src="images/P2-hover.webp" alt="">
     <div class="des">
-        <span>Product4</span>
-        <h5>Product subheading</h5>
+        <span>Trapstar</span>
+        <h5>Shooters tracksuit</h5>
         <div class="stars">
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
-          <i class="bi bi-star"></i>
+        stars
+        stars
+        stars
+        stars
+        stars
     </div>
         <h4>£78</h4>         
     </div>
     <a href="#"><i class="bi bi-cart cart"></i></a>
    </div>
-   <div class = "image_fade pro">
-    <img class ="Sirv image-main" src="images/p2.webp" alt="">
-    <img class ="Sirv image-hover" src="images/P2-hover.webp" alt="">
+   <div class="image_fade pro image_fade-animation">
+    <img class="Sirv image-main" src="images/p2.webp" alt="">
+    <img class="Sirv image-hover" src="images/P2-hover.webp" alt="">
     <div class="des">
-        <span>Product5</span>
-        <h5>Product subheading</h5>
+        <span>Trapstar</span>
+        <h5>Shooters tracksuit</h5>
         <div class="stars">
-          <i class="bi bi-star"></i>
-        
+        stars
+        stars
+        stars
+        stars
+        stars
     </div>
         <h4>£78</h4>         
     </div>
     <a href="#"><i class="bi bi-cart cart"></i></a>
    </div>
-   <div class = "image_fade pro">
-    <img class ="Sirv image-main" src="images/p6.webp" alt="">
-    <img class ="Sirv image-hover" src="images/P6-hover.webp" alt="">
+   <div class="image_fade pro image_fade-animation">
+    <img class="Sirv image-main" src="images/p2.webp" alt="">
+    <img class="Sirv image-hover" src="images/P2-hover.webp" alt="">
     <div class="des">
-        <span>Product6</span>
-        <h5>Product subheading</h5>
+        <span>Trapstar</span>
+        <h5>Shooters tracksuit</h5>
         <div class="stars">
+        stars
+        stars
+        stars
+        stars
+        stars
     </div>
         <h4>£78</h4>         
     </div>
     <a href="#"><i class="bi bi-cart cart"></i></a>
    </div>
-   <div class = "image_fade pro">
-    <img class ="Sirv image-main" src="images/p7.webp" alt="">
-    <img class ="Sirv image-hover" src="images/P7-hover.webp" alt="">
+   <div class="image_fade pro image_fade-animation">
+    <img class="Sirv image-main" src="images/p2.webp" alt="">
+    <img class="Sirv image-hover" src="images/P2-hover.webp" alt="">
     <div class="des">
-        <span>Product7</span>
-        <h5>Product subheading</h5>
+        <span>Trapstar</span>
+        <h5>Shooters tracksuit</h5>
         <div class="stars">
-          <i class="bi bi-star"></i>
+        stars
+        stars
+        stars
+        stars
+        stars
     </div>
         <h4>£78</h4>         
     </div>
     <a href="#"><i class="bi bi-cart cart"></i></a>
    </div>
-   <div class = "image_fade pro">
-    <img class ="Sirv image-main" src="images/p8.webp" alt="">
-    <img class ="Sirv image-hover" src="images/P8-hover.webp" alt="">
+   <div class="image_fade pro image_fade-animation">
+    <img class="Sirv image-main" src="images/p2.webp" alt="">
+    <img class="Sirv image-hover" src="images/P2-hover.webp" alt="">
     <div class="des">
-        <span>Product8</span>
-        <h5>Product subheading</h5>
+        <span>Trapstar</span>
+        <h5>Shooters tracksuit</h5>
         <div class="stars">
+        stars
+        stars
+        stars
+        stars
+        stars
     </div>
         <h4>£78</h4>         
     </div>
