Testing the stars and click function

--- a/public/index.html
+++ b/public/index.html
@@ -144,18 +144,18 @@
       </nav>
 
 <div class="pro-container">
-  <div class="image_fade pro image_fade-animation">
+  <div class="image_fade pro image_fade-animation onclick="window.location.href='sproduct.html';"> ">
     <img class="Sirv image-main" src="images/p2.webp" alt="">
     <img class="Sirv image-hover" src="images/P2-hover.webp" alt="">
     <div class="des">
         <span>Trapstar</span>
         <h5>Shooters tracksuit</h5>
         <div class="stars">
-        stars
-        stars
-        stars
-        stars
-        stars
+          <i class="bi bi-star"></i>
+          <i class="bi bi-star"></i>
+          <i class="bi bi-star"></i>
+          <i class="bi bi-star"></i>
+          <i class="bi bi-star"></i>
     </div>
         <h4>£78</h4>         
     </div>
