Testing the stars and click function 3

--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
       </nav>
 
 <div class="pro-container">
-  <div class="image_fade pro image_fade-animation onclick="window.location.href='sproduct.html'>
+  <div class="image_fade pro image_fade-animation" onclick="window.location.href='sproduct.html'">
     <img class="Sirv image-main" src="images/p2.webp" alt="">
     <img class="Sirv image-hover" src="images/P2-hover.webp" alt="">
     <div class="des">
